--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.google.com/share?selection.family=Fredoka:wght@300..700);
 /*DECLARANDO VARIÁVEIS*/
-;root{
+:root{
     --cor-de-fundo: hsl(313, 97%, 55%);
     --verde: #ff3ce5cb;
     --branco: #ffffff;
