--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url(https://fonts.google.com/share?selection.family=Fredoka:wght@300..700);
 /*DECLARANDO VARIÁVEIS*/
 :root{
-    --cor-de-fundo: hsla(313, 85%, 44%, 0.781);
-    --verde: #ff3ce5cb;
+    --cor-de-fundo: #f1188fee;
+    --verde: #ff08a0c0;
     --branco: #ffffff;
-    --botao-ativo: #aa157df6;
-    --botao-inativo: rgba(223, 25, 180, 0.774);
+    --botao-ativo: #8f0561;
+    --botao-inativo: rgba(238, 18, 209, 0.856);
     --texto-fundo: rgb(2, 2, 2);
 }
 /**/
