--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body{
     font-size: 20px;
     margin: 0;
 }
-
+/*
 @media screen (min-width: 768px){
     .botoes{
         display: flex;
@@ -118,6 +118,20 @@ body{
         border-radius: 40px 0 0 0;
     }
     .botao:last-child{
+        border-radius: 0 40px 0 0;
+    }
+}*/
+
+@media screen and (min-width: 768px) {
+    .botoes {
+        display: flex;
+    }
+
+    .botao:first-child {
+        border-radius: 40px 0 0 0;
+    }
+
+    .botao:last-child {
         border-radius: 0 40px 0 0;
     }
 }
