--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@
     --cor-de-fundo: #e9b8d2ee;
     --verde: #ff08a079;
     --branco: #ffffff;
-    --botao-ativo: #8f0561;
-    --botao-inativo: rgba(231, 5, 118, 0.582);
-    --texto-fundo: rgb(165, 30, 131);
+    --botao-ativo: #830b5b;
+    --botao-inativo: rgba(219, 0, 110, 0.582);
+    --texto-fundo: rgb(2, 2, 2);
 }
 /**/
 body{
