--- a/style.css
+++ b/style.css
@@ -1,28 +1,17 @@
 @import url(https://fonts.google.com/share?selection.family=Fredoka:wght@300..700);
 /*DECLARANDO VARIÁVEIS*/
 :root{
-    --cor-de-fundo: #e9b8d2ee;
-    --verde: #ff08a079;
+    --cor-de-fundo: #273c75;
+    --verde: #028afa;
     --branco: #ffffff;
-    --botao-ativo: #830b5b;
-    --botao-inativo: rgba(219, 0, 110, 0.582);
+    --botao-ativo: #1d13ac;
+    --botao-inativo: rgba(6, 30, 109, 0.774);
     --texto-fundo: rgb(2, 2, 2);
 }
 /**/
 body{
     background-color: var(--cor-de-fundo);/**/
-    colo/*
-@media screen (min-width: 768px){
-    .botoes{
-        display: flex;
-    }
-    .botao:first-child{
-        border-radius: 40px 0 0 0;
-    }
-    .botao:last-child{
-        border-radius: 0 40px 0 0;
-    }
-}*/r: var(--branco);
+    color: var(--branco);
     font-family: "Fredoka", sans-serif;
 }
 
@@ -56,18 +45,7 @@ body{
     padding: 1em;
     font-size: 18px;
     align-items: center;
-    widt/*
-    @media screen (min-width: 768px){
-        .botoes{
-            display: flex;
-        }
-        .botao:first-child{
-            border-radius: 40px 0 0 0;
-        }
-        .botao:last-child{
-            border-radius: 0 40px 0 0;
-        }
-    }*/h: 100%;
+    width: 100%;
     border-bottom: 4px solid var(--botao-ativo);
     border-left: 4px solid var(--botao-ativo);
     border-right: 4px solid var(--botao-ativo);
@@ -132,18 +110,14 @@ body{
     margin: 0;
 }
 
-
-@media screen and (min-width: 768px) {
-    .botoes {
+@media screen and (min-width: 768px){
+    .botoes{
         display: flex;
     }
-
-    .botao:first-child {
+    .botao:first-child{
         border-radius: 40px 0 0 0;
     }
-
-    .botao:last-child {
+    .botao:last-child{
         border-radius: 0 40px 0 0;
     }
 }
-   
