--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url(https://fonts.google.com/share?selection.family=Fredoka:wght@300..700);
 /*DECLARANDO VARIÁVEIS*/
 :root{
-    --cor-de-fundo: #273c75;
-    --verde: #028afa;
+    --cor-de-fundo: #e9b8d2ee;
+    --verde: #ff08a079;
     --branco: #ffffff;
-    --botao-ativo: #1d13ac;
-    --botao-inativo: rgba(6, 30, 109, 0.774);
+    --botao-ativo: #830b5b;
+    --botao-inativo: rgba(219, 0,  110, 0.582);
     --texto-fundo: rgb(2, 2, 2);
 }
 /**/
